--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -50,9 +50,11 @@
                 class="col-8 form-control email-field"
                 type="email"
                 name="email"
+                disabled
               />
               <button
                 class="col-4 btn btn-primary email-button font-weight-bold"
+                disabled
               >
                 Go
               </button>
