--- a/src/app/components/shared/footer/footer.component.scss
+++ b/src/app/components/shared/footer/footer.component.scss
@@ -1,15 +1,16 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .myma-logo {
   object-fit: contain;
   width: 6rem;
   margin-top: 0.25rem;
   margin-bottom: 0.4rem;
 }
-
 a {
   margin-bottom: var(--spacing-half);
   color: var(--bg-primary-light);
 }
-
 .email-field {
   border-radius: 0.5rem 0 0 0.5rem !important;
 }
@@ -17,20 +18,21 @@ a {
   border-radius: 0 0.5rem 0.5rem 0 !important;
 }
 
-@media (max-width: 767.9px) {
-  .second-col {
-    flex-direction: column-reverse;
-    padding: 0;
-  }
-}
-
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .footer-container {
     padding-left: 2rem !important;
     padding-right: 2rem !important;
   }
-
   .footer-col {
     padding: 0 !important;
+  }
+}
+@media (max-width: 767.9px) {
+  .second-col {
+    flex-direction: column-reverse;
+    padding: 0;
   }
 }
