--- a/src/app/components/home/home-banner/home-banner.component.scss
+++ b/src/app/components/home/home-banner/home-banner.component.scss
@@ -1,6 +1,6 @@
-/*********************************************************************************************/
-// General styles
-/*********************************************************************************************/
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .myma-title {
   line-height: 32px;
 }
@@ -19,9 +19,9 @@
   );
 }
 
-/*********************************************************************************************/
-// Mobile version styles
-/*********************************************************************************************/
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .banner-text {
     padding-left: 2rem !important;
