--- a/src/app/components/home/home-products/home-products.component.scss
+++ b/src/app/components/home/home-products/home-products.component.scss
@@ -19,9 +19,9 @@
 }
 /*********************************************************************************************/
 
-/*********************************************************************************************/
-// General styles
-/*********************************************************************************************/
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .row-small {
   display: none;
 }
@@ -64,9 +64,9 @@ article .container-fluid .row {
   overflow: hidden;
 }
 
-/*********************************************************************************************/
-// Mobile version styles
-/*********************************************************************************************/
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .first-col {
     margin-top: -10%;
@@ -121,9 +121,9 @@ article .container-fluid .row {
   }
 }
 
-/*********************************************************************************************/
-// Large screens styles
-/*********************************************************************************************/
+/*********************************************************************************************
+ * Large screens styles
+ *********************************************************************************************/
 @media (min-width: 992px) {
   // Transitions and styles for the content divs that appear on hover
   .product-col:hover .product-presentation {
