--- a/src/app/components/products/whitelabel/whitelabel.component.scss
+++ b/src/app/components/products/whitelabel/whitelabel.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (min-width: 992px) {
   .banner-large {
     display: block !important;
