--- a/src/app/components/contact/contact-form/contact-form.component.html
+++ b/src/app/components/contact/contact-form/contact-form.component.html
@@ -129,7 +129,7 @@
       <div class="text-center margin-top-3">
         <button
           type="submit"
-          class="btn btn-primary font-weight-bold text-center"
+          class="btn btn-secondary font-weight-bold text-center"
         >
           Submit
         </button>
