--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -32,7 +32,7 @@
                   <div class="text-center margin-top-5 product-button">
                     <a
                       type="link"
-                      class="btn btn-primary font-weight-bold"
+                      class="btn btn-secondary font-weight-bold"
                       href="https://wifiplug.co.uk/"
                     >
                       Details
@@ -70,7 +70,7 @@
                 <div class="text-center margin-top-5 product-button button-2">
                   <a
                     type="link"
-                    class="btn btn-primary font-weight-bold"
+                    class="btn btn-secondary font-weight-bold"
                     routerLink="serviceplug"
                   >
                     Details
@@ -107,7 +107,7 @@
                   <div class="text-center margin-top-5 product-button">
                     <a
                       type="link"
-                      class="btn btn-primary font-weight-bold"
+                      class="btn btn-secondary font-weight-bold"
                       routerLink="whitelabel"
                     >
                       Details
@@ -143,7 +143,7 @@
                 <div class="text-center margin-top-5 product-button">
                   <a
                     type="link"
-                    class="btn btn-primary font-weight-bold"
+                    class="btn btn-secondary font-weight-bold"
                     routerLink="consulting"
                   >
                     Details
@@ -186,7 +186,7 @@
                   <div class="text-center margin-top-5 product-button">
                     <a
                       type="link"
-                      class="btn btn-primary font-weight-bold"
+                      class="btn btn-secondary font-weight-bold"
                       href="https://wifiplug.co.uk/"
                     >
                       Details
@@ -222,7 +222,7 @@
                   machine's lifespan!
                 </p>
                 <div class="text-center margin-top-5 product-button">
-                  <a type="link" class="btn btn-primary font-weight-bold">
+                  <a type="link" class="btn btn-secondary font-weight-bold">
                     Details
                   </a>
                 </div>
@@ -258,7 +258,7 @@
                     machine's lifespan!
                   </p>
                   <div class="text-center margin-top-5 product-button">
-                    <a type="link" class="btn btn-primary font-weight-bold">
+                    <a type="link" class="btn btn-secondary font-weight-bold">
                       Details
                     </a>
                   </div>
@@ -290,7 +290,7 @@
                   machine's lifespan!
                 </p>
                 <div class="text-center margin-top-5 product-button">
-                  <a type="link" class="btn btn-primary font-weight-bold">
+                  <a type="link" class="btn btn-secondary font-weight-bold">
                     Details
                   </a>
                 </div>
