--- a/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
+++ b/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.html
@@ -9,7 +9,7 @@
     <button
       type="button"
       (click)="onMoreClick('howItWorks-anchor')"
-      class="btn btn-primary font-weight-bold"
+      class="btn btn-secondary font-weight-bold"
     >
       Learn more
     </button>
