fixed home products

--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -14,7 +14,7 @@
               class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div first-content-div"
             >
               <div>
-                <h3 class="text-color-primary font-weight-bold">WIFIPLUG</h3>
+                <h3 class="text-color-primary">WIFIPLUG</h3>
                 <h5 class="text-color-secondary">
                   Simplify, schedule and automate daily life.
                 </h5>
@@ -32,7 +32,7 @@
                   <a
                     type="link"
                     class="btn btn-secondary font-weight-bold"
-                    routerLink="serviceplug"
+                    href="https://wifiplug.co.uk/"
                   >
                     Details
                   </a>
@@ -50,7 +50,7 @@
               class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
             >
               <div>
-                <h3 class="text-color-primary font-weight-bold">SERVICEPLUG</h3>
+                <h3 class="text-color-primary">SERVICEPLUG</h3>
                 <h5 class="text-color-secondary">
                   Manage your appliances, and extend their lifespan.
                 </h5>
@@ -87,7 +87,7 @@
               class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
             >
               <div>
-                <h3 class="text-color-primary font-weight-bold">
+                <h3 class="text-color-primary">
                   White Labelling
                 </h3>
                 <h5 class="text-color-secondary">
@@ -108,7 +108,7 @@
                   <a
                     type="link"
                     class="btn btn-secondary font-weight-bold"
-                    routerLink="serviceplug"
+                    routerLink="whitelabel"
                   >
                     Details
                   </a>
@@ -126,7 +126,7 @@
               class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div last-content-div"
             >
               <div>
-                <h3 class="text-color-primary font-weight-bold">Consulting</h3>
+                <h3 class="text-color-primary">Consulting</h3>
                 <h5 class="text-color-secondary">
                   Brilliant solutions. <br />Profitable results.
                 </h5>
@@ -143,7 +143,7 @@
                   <a
                     type="link"
                     class="btn btn-secondary font-weight-bold"
-                    routerLink="serviceplug"
+                    routerLink="consulting"
                   >
                     Details
                   </a>
